source/parser.automaton
State 0:
program' -> . program [ # ]
-- On WHILE shift to state 1
-- On TRUE shift to state 3
-- On RETURN shift to state 51
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On INTLITERAL shift to state 6
-- On IF shift to state 55
-- On ID shift to state 7
-- On FOR shift to state 66
-- On FLOATLITERAL shift to state 9
-- On FALSE shift to state 10
-- On CONTINUE shift to state 77
-- On BREAK shift to state 79
-- On statement shift to state 92
-- On program shift to state 94
-- On expr shift to state 82

State 1:
statement -> WHILE . LPAREN expr RPAREN LBRACE statement_list RBRACE [ WHILE TRUE RETURN RBRACE NOT MINUS INTLITERAL IF ID FOR FLOATLITERAL FALSE EOF CONTINUE BREAK ]
-- On LPAREN shift to state 2

State 2:
statement -> WHILE LPAREN . expr RPAREN LBRACE statement_list RBRACE [ WHILE TRUE RETURN RBRACE NOT MINUS INTLITERAL IF ID FOR FLOATLITERAL FALSE EOF CONTINUE BREAK ]
-- On TRUE shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On INTLITERAL shift to state 6
-- On ID shift to state 7
-- On FLOATLITERAL shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 47

State 3:
expr -> TRUE . [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TO reduce production expr -> TRUE 
-- On TIMES reduce production expr -> TRUE 
-- On SEMI reduce production expr -> TRUE 
-- On RSQUARE reduce production expr -> TRUE 
-- On RPAREN reduce production expr -> TRUE 
-- On PLUS reduce production expr -> TRUE 
-- On OR reduce production expr -> TRUE 
-- On NEQ reduce production expr -> TRUE 
-- On MINUS reduce production expr -> TRUE 
-- On LT reduce production expr -> TRUE 
-- On LEQ reduce production expr -> TRUE 
-- On GT reduce production expr -> TRUE 
-- On GEQ reduce production expr -> TRUE 
-- On EQ reduce production expr -> TRUE 
-- On DIVIDE reduce production expr -> TRUE 
-- On COMMA reduce production expr -> TRUE 
-- On BY reduce production expr -> TRUE 
-- On AND reduce production expr -> TRUE 

State 4:
expr -> NOT . expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TRUE shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On INTLITERAL shift to state 6
-- On ID shift to state 7
-- On FLOATLITERAL shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 46

State 5:
expr -> MINUS . expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TRUE shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On INTLITERAL shift to state 6
-- On ID shift to state 7
-- On FLOATLITERAL shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 45

State 6:
expr -> INTLITERAL . [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TO reduce production expr -> INTLITERAL 
-- On TIMES reduce production expr -> INTLITERAL 
-- On SEMI reduce production expr -> INTLITERAL 
-- On RSQUARE reduce production expr -> INTLITERAL 
-- On RPAREN reduce production expr -> INTLITERAL 
-- On PLUS reduce production expr -> INTLITERAL 
-- On OR reduce production expr -> INTLITERAL 
-- On NEQ reduce production expr -> INTLITERAL 
-- On MINUS reduce production expr -> INTLITERAL 
-- On LT reduce production expr -> INTLITERAL 
-- On LEQ reduce production expr -> INTLITERAL 
-- On GT reduce production expr -> INTLITERAL 
-- On GEQ reduce production expr -> INTLITERAL 
-- On EQ reduce production expr -> INTLITERAL 
-- On DIVIDE reduce production expr -> INTLITERAL 
-- On COMMA reduce production expr -> INTLITERAL 
-- On BY reduce production expr -> INTLITERAL 
-- On AND reduce production expr -> INTLITERAL 

State 7:
expr -> ID . [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> ID . LSQUARE args_list RSQUARE [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> ID . LPAREN args_list RPAREN [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> ID . ASSIGN expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On LSQUARE shift to state 8
-- On LPAREN shift to state 40
-- On ASSIGN shift to state 43
-- On TO reduce production expr -> ID 
-- On TIMES reduce production expr -> ID 
-- On SEMI reduce production expr -> ID 
-- On RSQUARE reduce production expr -> ID 
-- On RPAREN reduce production expr -> ID 
-- On PLUS reduce production expr -> ID 
-- On OR reduce production expr -> ID 
-- On NEQ reduce production expr -> ID 
-- On MINUS reduce production expr -> ID 
-- On LT reduce production expr -> ID 
-- On LEQ reduce production expr -> ID 
-- On GT reduce production expr -> ID 
-- On GEQ reduce production expr -> ID 
-- On EQ reduce production expr -> ID 
-- On DIVIDE reduce production expr -> ID 
-- On COMMA reduce production expr -> ID 
-- On BY reduce production expr -> ID 
-- On AND reduce production expr -> ID 

State 8:
expr -> ID LSQUARE . args_list RSQUARE [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TRUE shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On INTLITERAL shift to state 6
-- On ID shift to state 7
-- On FLOATLITERAL shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 11
-- On args_list shift to state 36
-- On RSQUARE reduce production args_list -> 
-- On COMMA reduce production args_list -> 

State 9:
expr -> FLOATLITERAL . [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TO reduce production expr -> FLOATLITERAL 
-- On TIMES reduce production expr -> FLOATLITERAL 
-- On SEMI reduce production expr -> FLOATLITERAL 
-- On RSQUARE reduce production expr -> FLOATLITERAL 
-- On RPAREN reduce production expr -> FLOATLITERAL 
-- On PLUS reduce production expr -> FLOATLITERAL 
-- On OR reduce production expr -> FLOATLITERAL 
-- On NEQ reduce production expr -> FLOATLITERAL 
-- On MINUS reduce production expr -> FLOATLITERAL 
-- On LT reduce production expr -> FLOATLITERAL 
-- On LEQ reduce production expr -> FLOATLITERAL 
-- On GT reduce production expr -> FLOATLITERAL 
-- On GEQ reduce production expr -> FLOATLITERAL 
-- On EQ reduce production expr -> FLOATLITERAL 
-- On DIVIDE reduce production expr -> FLOATLITERAL 
-- On COMMA reduce production expr -> FLOATLITERAL 
-- On BY reduce production expr -> FLOATLITERAL 
-- On AND reduce production expr -> FLOATLITERAL 

State 10:
expr -> FALSE . [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TO reduce production expr -> FALSE 
-- On TIMES reduce production expr -> FALSE 
-- On SEMI reduce production expr -> FALSE 
-- On RSQUARE reduce production expr -> FALSE 
-- On RPAREN reduce production expr -> FALSE 
-- On PLUS reduce production expr -> FALSE 
-- On OR reduce production expr -> FALSE 
-- On NEQ reduce production expr -> FALSE 
-- On MINUS reduce production expr -> FALSE 
-- On LT reduce production expr -> FALSE 
-- On LEQ reduce production expr -> FALSE 
-- On GT reduce production expr -> FALSE 
-- On GEQ reduce production expr -> FALSE 
-- On EQ reduce production expr -> FALSE 
-- On DIVIDE reduce production expr -> FALSE 
-- On COMMA reduce production expr -> FALSE 
-- On BY reduce production expr -> FALSE 
-- On AND reduce production expr -> FALSE 

State 11:
args_list -> expr . [ RSQUARE RPAREN COMMA ]
expr -> expr . TIMES expr [ TIMES RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA AND ]
expr -> expr . DIVIDE expr [ TIMES RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA AND ]
expr -> expr . PLUS expr [ TIMES RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA AND ]
expr -> expr . MINUS expr [ TIMES RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA AND ]
expr -> expr . LT expr [ TIMES RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA AND ]
expr -> expr . GT expr [ TIMES RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA AND ]
expr -> expr . LEQ expr [ TIMES RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA AND ]
expr -> expr . GEQ expr [ TIMES RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA AND ]
expr -> expr . NEQ expr [ TIMES RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA AND ]
expr -> expr . EQ expr [ TIMES RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA AND ]
expr -> expr . AND expr [ TIMES RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA AND ]
expr -> expr . OR expr [ TIMES RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA AND ]
-- On TIMES shift to state 12
-- On PLUS shift to state 14
-- On OR shift to state 18
-- On NEQ shift to state 20
-- On MINUS shift to state 22
-- On LT shift to state 24
-- On LEQ shift to state 26
-- On GT shift to state 28
-- On GEQ shift to state 30
-- On EQ shift to state 32
-- On DIVIDE shift to state 16
-- On AND shift to state 34
-- On RSQUARE reduce production args_list -> expr 
-- On RPAREN reduce production args_list -> expr 
-- On COMMA reduce production args_list -> expr 

State 12:
expr -> expr TIMES . expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TRUE shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On INTLITERAL shift to state 6
-- On ID shift to state 7
-- On FLOATLITERAL shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 13

State 13:
expr -> expr . TIMES expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr TIMES expr . [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . DIVIDE expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . PLUS expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . MINUS expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . LT expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . GT expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . LEQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . GEQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . NEQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . EQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . AND expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . OR expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TO reduce production expr -> expr TIMES expr 
-- On TIMES reduce production expr -> expr TIMES expr 
-- On SEMI reduce production expr -> expr TIMES expr 
-- On RSQUARE reduce production expr -> expr TIMES expr 
-- On RPAREN reduce production expr -> expr TIMES expr 
-- On PLUS reduce production expr -> expr TIMES expr 
-- On OR reduce production expr -> expr TIMES expr 
-- On NEQ reduce production expr -> expr TIMES expr 
-- On MINUS reduce production expr -> expr TIMES expr 
-- On LT reduce production expr -> expr TIMES expr 
-- On LEQ reduce production expr -> expr TIMES expr 
-- On GT reduce production expr -> expr TIMES expr 
-- On GEQ reduce production expr -> expr TIMES expr 
-- On EQ reduce production expr -> expr TIMES expr 
-- On DIVIDE reduce production expr -> expr TIMES expr 
-- On COMMA reduce production expr -> expr TIMES expr 
-- On BY reduce production expr -> expr TIMES expr 
-- On AND reduce production expr -> expr TIMES expr 

State 14:
expr -> expr PLUS . expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TRUE shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On INTLITERAL shift to state 6
-- On ID shift to state 7
-- On FLOATLITERAL shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 15

State 15:
expr -> expr . TIMES expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . DIVIDE expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . PLUS expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr PLUS expr . [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . MINUS expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . LT expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . GT expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . LEQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . GEQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . NEQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . EQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . AND expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . OR expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TIMES shift to state 12
-- On DIVIDE shift to state 16
-- On TO reduce production expr -> expr PLUS expr 
-- On SEMI reduce production expr -> expr PLUS expr 
-- On RSQUARE reduce production expr -> expr PLUS expr 
-- On RPAREN reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On OR reduce production expr -> expr PLUS expr 
-- On NEQ reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On LT reduce production expr -> expr PLUS expr 
-- On LEQ reduce production expr -> expr PLUS expr 
-- On GT reduce production expr -> expr PLUS expr 
-- On GEQ reduce production expr -> expr PLUS expr 
-- On EQ reduce production expr -> expr PLUS expr 
-- On COMMA reduce production expr -> expr PLUS expr 
-- On BY reduce production expr -> expr PLUS expr 
-- On AND reduce production expr -> expr PLUS expr 

State 16:
expr -> expr DIVIDE . expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TRUE shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On INTLITERAL shift to state 6
-- On ID shift to state 7
-- On FLOATLITERAL shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 17

State 17:
expr -> expr . TIMES expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . DIVIDE expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr DIVIDE expr . [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . PLUS expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . MINUS expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . LT expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . GT expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . LEQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . GEQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . NEQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . EQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . AND expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . OR expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TO reduce production expr -> expr DIVIDE expr 
-- On TIMES reduce production expr -> expr DIVIDE expr 
-- On SEMI reduce production expr -> expr DIVIDE expr 
-- On RSQUARE reduce production expr -> expr DIVIDE expr 
-- On RPAREN reduce production expr -> expr DIVIDE expr 
-- On PLUS reduce production expr -> expr DIVIDE expr 
-- On OR reduce production expr -> expr DIVIDE expr 
-- On NEQ reduce production expr -> expr DIVIDE expr 
-- On MINUS reduce production expr -> expr DIVIDE expr 
-- On LT reduce production expr -> expr DIVIDE expr 
-- On LEQ reduce production expr -> expr DIVIDE expr 
-- On GT reduce production expr -> expr DIVIDE expr 
-- On GEQ reduce production expr -> expr DIVIDE expr 
-- On EQ reduce production expr -> expr DIVIDE expr 
-- On DIVIDE reduce production expr -> expr DIVIDE expr 
-- On COMMA reduce production expr -> expr DIVIDE expr 
-- On BY reduce production expr -> expr DIVIDE expr 
-- On AND reduce production expr -> expr DIVIDE expr 

State 18:
expr -> expr OR . expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TRUE shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On INTLITERAL shift to state 6
-- On ID shift to state 7
-- On FLOATLITERAL shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 19

State 19:
expr -> expr . TIMES expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . DIVIDE expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . PLUS expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . MINUS expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . LT expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . GT expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . LEQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . GEQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . NEQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . EQ expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . AND expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr . OR expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
expr -> expr OR expr . [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TIMES shift to state 12
-- On PLUS shift to state 14
-- On NEQ shift to state 20
-- On MINUS shift to state 22
-- On LT shift to state 24
-- On LEQ shift to state 26
-- On GT shift to state 28
-- On GEQ shift to state 30
-- On EQ shift to state 32
-- On DIVIDE shift to state 16
-- On AND shift to state 34
-- On TO reduce production expr -> expr OR expr 
-- On SEMI reduce production expr -> expr OR expr 
-- On RSQUARE reduce production expr -> expr OR expr 
-- On RPAREN reduce production expr -> expr OR expr 
-- On OR reduce production expr -> expr OR expr 
-- On COMMA reduce production expr -> expr OR expr 
-- On BY reduce production expr -> expr OR expr 

State 20:
expr -> expr NEQ . expr [ TO TIMES SEMI RSQUARE RPAREN PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE COMMA BY AND ]
-- On TRUE shift to state 3
-- On NOT shift to state 4
-- On MINUS shift to state 5
-- On INTLITERAL shift to state 6
-- On ID shift to state 7
-- On FLOATLITERAL shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 21
